# naval-sem

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_linux.sh  build_macos.sh  build_windows.bat  launcher.py  main.py  naval_sem.spec  pyproject.toml  requirements.in  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bandit.yml  codeql.yml  release.yml  scorecard.yml
app/: __init__.py  engine.py  engine_bayesian.py  engine_ipma.py  engine_lca.py  engine_mga.py  engine_missing.py  engine_mod_mediation.py  engine_moderation.py  engine_utils.py  engine_utils_additions.py  engine_v07.py  export_docx.py  export_pdf.py  fimix.py  fsqca.py  main.py  nca.py  nca_esse.py  parser.py  pls.py  plspos.py  requirements.in  scale.py  schemas.py  version.py
cases/: cases.json
docs/: METHODS_TEMPLATE.md  VALIDATION.md  building.md  index.html  sitemap.xml
docs/cases/: index.html
docs/community/badges/: README.md
docs/compare/: smartpls-vs-naval-sem.html
installer/: license.rtf  naval_sem.wxs
static/: index.html
