[project]
name = "naval-sem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altgraph==0.17.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "bottle==0.13.4",
    "cffi==2.0.0",
    "click==8.4.1",
    "clr-loader==0.3.1",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "fastapi==0.136.3",
    "h11==0.16.0",
    "httptools==0.8.0",
    "idna==3.16",
    "joblib==1.5.3",
    "macholib==1.16.4",
    "mpmath==1.3.0",
    "narwhals==2.21.2",
    "numdifftools==0.9.42",
    "numpy==2.4.6",
    "openpyxl==3.1.5",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "pefile==2024.8.26",
    "proxy-tools==0.1.0",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.47.0",
    "pyinstaller==6.20.0",
    "pyinstaller-hooks-contrib==2026.5",
    "pyreadstat==1.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.29",
    "pythonnet==3.1.0",
    "pywebview==6.2.1",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "semopy==2.3.11",
    "setuptools==82.0.1",
    "six==1.17.0",
    "starlette==1.1.0",
    "statsmodels==0.14.6",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "uvicorn[standard]==0.48.0",
    "watchfiles==1.2.0",
    "websockets==16.0",
    "xlrd==2.0.2",
]
