[project]
name = "naval-sem"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "altgraph==0.17.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "bottle==0.13.4",
    "cffi==2.0.0",
    "click==8.4.2",
    "clr-loader==0.3.1",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "factor-analyzer==0.5.1",
    "fastapi==0.139.0",
    "h11==0.16.0",
    "httptools==0.8.0",
    "idna==3.16",
    "joblib==1.5.3",
    "macholib==1.16.4",
    # matplotlib powers the IPMA quadrant chart (engine_ipma.py). Unlike the
    # lazily-imported packages below (pyreadstat, python-docx, reportlab),
    # engine_ipma imports matplotlib at module level and is itself imported
    # at module level by main.py — so its absence stops the whole server
    # from starting, not just the /ipma endpoint.
    "matplotlib==3.11.0",
    "mpmath==1.3.0",
    "narwhals==2.23.0",
    "numdifftools==0.9.42",
    "numpy==2.4.6",
    "openpyxl==3.1.5",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "pefile==2024.8.26",
    "pingouin==0.6.1",
    "proxy-tools==0.1.0",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyinstaller==6.21.0",
    "pyinstaller-hooks-contrib==2026.6",
    # pyreadstat powers SPSS .sav file uploads (parser.parse_spss). Lazily
    # imported with a friendly ImportError message, so its absence only
    # breaks SPSS-file uploads specifically — it does not stop the server
    # from starting.
    "pyreadstat==1.3.5",
    "python-dateutil==2.9.0.post0",
    # python-docx powers /export/docx (app/export_docx.py). The endpoint already
    # degrades gracefully with an actionable error if this is missing, but it
    # should stay declared so a standard `uv sync` doesn't need a follow-up step.
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pythonnet==3.1.0",
    "pywebview==6.2.1",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    # reportlab powers /export/pdf (app/export_pdf.py). The endpoint already
    # degrades gracefully with an actionable error if this is missing, but it
    # should stay declared so a standard `uv sync` doesn't need a follow-up step.
    "reportlab==5.0.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    # semopy is a hard dependency of fit_model() in engine.py even on the PLS
    # path (presence-checked at the top of the function before branching on
    # algorithm) — without it every /run, /bootstrap, /mga, /moderation, /ipma,
    # /nca, /nca-esse, /mod-mediation call 500s regardless of chosen algorithm.
    "semopy==2.3.11",
    "setuptools==82.0.1",
    "six==1.17.0",
    "starlette==1.3.1",
    "statsmodels==0.14.6",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "uvicorn[standard]==0.49.0",
    "watchfiles==1.2.0",
    "websockets==16.0",
    "xlrd==2.0.2",
]

[tool.uv]
# Makes `uv add <pkg>` write an exact "==" pin (matching every other line
# above) instead of uv's own default of a ">=" lower bound. Purely a
# pyproject.toml style choice — uv.lock pins the exact resolved version
# either way, so this doesn't change what actually gets installed.
add-bounds = "exact"
